# City-Master-2015

./: .gitignore  CMakeLists.txt  README.md  gl-res
Common/: str_hash.h
Import/: CMakeLists.txt  loader.cpp  loader.h
Import/Assimp/: CMakeLists.txt
Import/Assimp/code/: CMakeLists.txt
Memory/: CMakeLists.txt  bitsmemory.cpp  bitsmemory.h  utils.h
Resources/: CMakeLists.txt  crc32.h  hash.h  main.cpp  resources.cpp  resources.h  templates.h
Resources/lzham/: CMakeLists.txt
Resources/lzham/lzhamcomp/: CMakeLists.txt
Resources/lzham/lzhamdecomp/: CMakeLists.txt  lzham_types.h
Tests/: CMakeLists.txt  glprogram.cpp  glprogram.h  main.cpp  saturnrings.cpp  saturnrings.h  solarsystem.cpp  solarsystem.h
Tests/models/: box.dae  box.fbx  build.dae  moving_ball.dae  sphere.dae  test.3ds  test.dae  test.fbx  test.mtl  test.x  test.x3d
Tests/resources/: res_basic_frag.cpp  res_basic_frag.h  res_basic_frag_glsl.cpp  res_basic_frag_glsl.h  res_basic_vert.cpp  res_basic_vert.h  res_basic_vert_glsl.cpp  res_basic_vert_glsl.h  res_callisto_dds.cpp  res_callisto_dds.h  res_dione_dds.cpp  res_dione_dds.h  res_earth_dds.cpp  res_earth_dds.h  res_enceladus_dds.cpp  res_enceladus_dds.h  res_europa_dds.cpp  res_europa_dds.h  res_freesans_ttf.h  res_ganymede_dds.cpp  res_ganymede_dds.h  res_iapetus_dds.cpp  res_iapetus_dds.h  res_io_dds.cpp  res_io_dds.h  res_jupiter_dds.cpp  res_jupiter_dds.h  res_mars_dds.cpp  res_mars_dds.h  res_mercury_dds.cpp  res_mercury_dds.h  res_mercurymap_dds.cpp  res_mercurymap_dds.h  res_mimas_dds.cpp  res_mimas_dds.h  res_moon_dds.cpp  res_moon_dds.h  res_neptune_dds.cpp  res_neptune_dds.h  res_object_frag.cpp  (+71 more)
Tests/shaders/: basic.frag  basic_frag.glsl  basic_vert.glsl  fxaa_frag.glsl  fxaa_vert.glsl  light_pass_frag.glsl  light_pass_vert.glsl  object.frag  object.vert  object_differed_geom_pass_frag.glsl  object_differed_geom_pass_vert.glsl  object_frag.glsl  object_select.frag  object_select.vert  object_vert.glsl  particles_render.frag  particles_render.geom  particles_render.vert  particles_render_frag.glsl  particles_render_geom.glsl  particles_render_vert.glsl  particles_update.geom  particles_update.vert  particles_update_frag.glsl  particles_update_geom.glsl  point_light_pass_frag.glsl  raytracer_frag.glsl  raytracer_vert.glsl  skybox.frag  skybox.vert  text.frag  text_frag.glsl  text_vert.glsl  ui_box_frag.glsl  ui_box_vert.glsl
Tests/textures/: callisto.dds  dione.dds  earth.dds  enceladus.dds  europa.dds  ganymede.dds  iapetus.dds  io.dds  jupiter.dds  mars.dds  mercury.dds  mercurymap.dds  mimas.dds  moon.dds  neptune.dds  rhea.dds  saturn.dds  sun.dds  tethys.dds  titan.dds  uranus.dds  uranus.tga  venusmap.dds
UI/: CMakeLists.txt  box2d.cpp  box2d.h
Util/: CMakeLists.txt  animation.cpp  animation.h  axis.cpp  axis.h  buffer_store.cpp  buffer_store.h  camera.cpp  camera.h  clock.cpp  clock.h  colourid.cpp  colourid.h  controlinput.cpp  controlinput.h  gbuffer.cpp  gbuffer.h  gldebugger.cpp  gldebugger.h  glvalidator.cpp  glvalidator.h  helperfunctions.cpp  helperfunctions.h  keyboard.cpp  keyboard.h  lamp.cpp  lamp.h  mesh.cpp  mesh.h  mesh2d.cpp  mesh2d.h  mesh2dcollection.cpp  mesh2dcollection.h  mesh3d.cpp  mesh3d.h  mesh3dcollection.cpp  mesh3dcollection.h  mesh_2d.cpp  mesh_2d.h  mesh_3d.cpp  (+41 more)
Util/SOIL/: CMakeLists.txt  SOIL.c  SOIL.cpp
